--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 
     .name{
       color: var(--accent-color);
-      font-size: 1rem;
       
     }
 
@@ -84,6 +83,12 @@
     .address{
       color: var(--address-color);
       margin-top: 0;
+    }
+
+    @media (max-width: 320px){
+      .name{
+        font-size: 1rem;
+      }
     }
 
   </style>
