--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
       border-radius: 10px;
       text-decoration: none;
       color: var(--accent-color);
+      transition: .5s ease;
+    }
+
+    .link:hover{
+      background: var(--address-color);
     }
 
     .address{
